alb.ingress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: testcase
  name: echoserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: gcr.io/google_containers/echoserver:1.4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: testcase
  name: echoserver
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    app: echoserver
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: testcase
  name: echoserver
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
spec:
  rules:
  - http:
      paths:
      - backend:
         serviceName: ssl-redirect
         servicePort: use-annotation
      - path: /normal-path
        backend:
          serviceName: echoserver
          servicePort: 80
